Fix update cryption

--- a/FrontHospitalManager/HospitalManager/src/app/Shared/navbar/navbar.component.html
+++ b/FrontHospitalManager/HospitalManager/src/app/Shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             {
                 <ul class="dropdown-menu">
 
-                    <li><a routerLink="/admin-add-medic">Ajouter un médecin</a></li>
+                    <li><a routerLink="/add-new-medic">Ajouter un médecin</a></li>
                 </ul>
             }
       </div>
